<resources>
    <string name="app_name">Mines</string>
    <string name="boardSize1">"%1$d X 6 size of Board:" </string>
    <string name="boardSize2">"%1$d X 10 size of Board:" </string>
    <string name="boardSize3">"%1$d X 15 size of Board:" </string>
    <string name="boardSize4">"%1$d X %1$d size of Board:" </string>
    <string name="numberofHearts"> "%1$d Hearts"</string>
    <string name="play">Play</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="find_my_heart">find my heart</string>
    <string name="help">Help</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="textview8">TextView</string>
    <string name="textview9">TextView</string>
    <string name="play1">Play</string>
    <string name="options1">Options</string>
    <string name="btnexit1">btnExit</string>
    <string name="number_of_hearts">number of hearts:</string>
    <string name="save_changes">Save Changes</string>
    <string name="size_of_board">size of board:</string>
    <string name="back">back</string>
    <string name="save_changes1">Save Changes</string>
    <string name="back1">back</string>
    <string name="save_changes2">Save Changes</string>
    <string name="back2">back</string>
    <string name="textview10">TextView</string>
    <string name="welcome">Welcome</string>
    <string name="skip">Skip</string>
    <string name="skip1">Skip</string>
</resources>
