<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.faraz098.mines.MainActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play1"
        android:layout_marginStart="43dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnOptions_save"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="43dp" />

    <Button
        android:id="@+id/btnOptions_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnExit"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="28dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnPlay" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnexit1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/btnOptions_save"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="56dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnOptions_save" />

</android.support.constraint.ConstraintLayout>
