<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.faraz098.mines.Options"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txtnumHearts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:text="@string/number_of_hearts"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="31dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtsize"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="43dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/txtsize"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/txtsize"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtsize">

    </RadioGroup>

    <Button
        android:id="@+id/btnOptions_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:text="@string/save_changes"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnoptions_goBack"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="34dp" />

    <Button
        android:id="@+id/btnoptions_goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toRightOf="@+id/btnreset"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/txtsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:text="@string/size_of_board"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="31dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="95dp" />

    <RadioGroup
        android:id="@+id/radioBomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/txtnumHearts"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtnumHearts"
        android:layout_marginLeft="14dp" />
    <Button
        android:id="@+id/btnreset"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="reset"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnoptions_goBack"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

</android.support.constraint.ConstraintLayout>
